--- a/TODO
+++ b/TODO
@@ -7,3 +7,10 @@ o Migrate directive list
 o Link in user guide 
 o Create CVS howto
 
+jwm:
+  * download: needs a cleanup (sort by geographic region, header by georeg?)
+    i'll let you do this, Mark :-)
+  * lists: add more space between lists
+  * security.epl needs an update
+  * the <blockquote><font><pre>/<p> stuff in lists,md5_pgp,old_news isn't
+    xhtml compliant, need to look into this
