--- a/TODO
+++ b/TODO
@@ -2,14 +2,15 @@ TODO
 ----
 
 ML:
-o Migrate FAQ
-o Migrate directive list
-o Link in user guide 
-o Create CVS howto
+  * Migrate FAQ
+  * Migrate directive list
+  * Link in user guide 
+  * Create CVS howto
 
 jwm:
   * download: needs a cleanup (sort by geographic region, header by georeg?)
     i'll let you do this, Mark :-)
+    (ML: work in progress.. as time happens)
   * lists: add more space between lists
   * security.epl needs an update
   * the <blockquote><font><pre>/<p> stuff in lists,md5_pgp,old_news isn't
