massive update to the web site: - full xhtml compliance, with much simpler, cleaner html - remove old cruft, fix dead links, update content - combined many pages, simplified the content/navigation/content a bit - refined the build system - deprecate mirror updates via CVS; we want all sites to use rsync

--- a/TODO
+++ b/TODO
@@ -3,5 +3,4 @@
 * Link in user guide 
 * Create CVS howto
 * lists: add more space between lists
-* the <blockquote><font><pre>/<p> stuff in lists,md5_pgp,old_news isn't
-  xhtml compliant, need to look into this
+* update features.epl
