--- a/docs/RELEASE_NOTES-1.3.8
+++ b/docs/RELEASE_NOTES-1.3.8
@@ -7,7 +7,7 @@ releases.  More information on these changes can be found in the NEWS and
 ChangeLog files.
 
 1.3.8
----------
+------
 
   + Implement support for the CSID FTP command, from an IETF Draft.
 
@@ -248,6 +248,11 @@ ChangeLog files.
 
       Support for using TLS when connecting to Redis servers has been
       implemented; see doc/modules/mod_redis.html#RedisServer for details.
+
+    SFTPKeyExchanges
+
+      "curve25519-sha256" has been added as an alias/synonym for
+      "curve25519-sha256@libssh.org".
 
     TLSCipherSuite
       TLSv1.3 ciphersuites have different names, and are configured differently
